<resources>
    <string name="app_name">TaskAppExample</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
    <string name="here_you_can_write_down_n_something_important_or_make_a_schedule_for_tomorrow">Here you can write down\n something important or make a schedule for tomorrow:)</string>
    <string name="to_do_list">To-do list!</string>
    <string name="title">Title</string>
    <string name="save">save</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="name">Name</string>
    <string name="new_task">New Task</string>
    <string name="onboard">Onboard</string>
    <string name="authentication">Authentication</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="verification_code">Verification code</string>
    <string name="exit">exit</string>
    <string name="sign_out">Sign out</string>
</resources>