<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.geektech.taskappexample.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.geektech.taskappexample.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.geektech.taskappexample.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/newTaskFragment"
        android:name="com.geektech.taskappexample.ui.home.new_task.NewTaskFragment"
        android:label="@string/new_task"
        tools:layout="@layout/fragment_new_task" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.geektech.taskappexample.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/onBoardFragment"
        android:name="com.geektech.taskappexample.ui.onboarding.OnBoardFragment"
        android:label="@string/onboard"
        tools:layout="@layout/fragment_on_board" />
    <fragment
        android:id="@+id/authFragment"
        android:name="com.geektech.taskappexample.ui.auth.AuthFragment"
        android:label="@string/authentication"
        tools:layout="@layout/fragment_auth" />
</navigation>