<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color1"
    tools:context=".ui.onboarding.OnBoardPageFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_board_picture"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_onboarding1" />

        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
            android:id="@+id/spring_dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            app:dampingRatio="0.5"
            app:dotsColor="@color/black"
            app:dotsCornerRadius="10dp"
            app:dotsSize="10dp"
            app:dotsSpacing="6dp"
            app:dotsStrokeColor="@color/black"
            app:dotsStrokeWidth="2dp"
            app:stiffness="300" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_do_list"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/here_you_can_write_down_n_something_important_or_make_a_schedule_for_tomorrow"
            android:textAlignment="center"
            android:textSize="17sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/skip"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:backgroundTint="@color/black"
                android:text="@string/next"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:paddingHorizontal="60dp"
                android:paddingVertical="14dp"
                android:text="@string/start"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>