<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anime_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_auth" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/anime_view"
    android:orientation="horizontal"
    android:id="@+id/container_phone_number">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_country_code"
        android:layout_width="80dp"
        android:layout_height="58dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

    <EditText
        android:gravity="center"
        android:id="@+id/et_country_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:editable="false"
        android:text="+996"
        android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone_number"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/phone_number">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_verification"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/verification_code"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/anime_view">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/toolbar_color"
        android:text="@string/next"
        android:textColor="@color/black"
        app:cornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/anime_view" />

    <ProgressBar
        android:id="@+id/determinateBar"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>